		Installed g_log_set_writer_func handler to suppress numerous
		GTK3 warnings.
		Updated BUILT_SOURCES for vermin.
		extern yy_size_t yyleng fix in rtlbrowse.
3.3.93	03aug18	Add missing XXX_gdk_pointer_ungrab() prototype for GTK3.
		Fix missing signal/wave window updates in Wayland.
		Fix mouseover initial position in Wayland.  Movement is
		not yet supported in Wayland for floating mouseover window.
		Crash fix for twinwave with Wayland (no GtkSocket/Plug).
		Added sst_dbl_action_type rc variable which controls side-
                effect of double-clicking in SST signals pane.
		Added preliminary support for gestures in wave window
		(currently disabled by default with rc variable use_gestures).
		Added GtkGestureSwipe for kinetic scrolling in waves window.
		Added GtkGestureLongPress for baseline marker set/clear.
		Added GtkGestureDrag to restore normal left cursor drag.
		Added GtkGestureZoom for zoom/pinch in waves window.
		Warnings cleanups.
		Double-click during gestures active deletes primary marker.
		Use gtk_gesture_single_set_button() to allow re-enabling
		dragzoom and middle mouse button clicking if use_gestures
		is enabled.
		Added xml2stems Verilator XML to rtlbrowse stems converter
		to distribution.  Eventually vermin will be removed.
		Added missing realpath() in udp	emission in vermin.
3.3.94	03sep18	Applied ghwlib.c patch for dealing with	null ranges.
		Fixed typo on gtk_gesture_zoom_new() being disconnected.
		Slowed down ctrl-scroll for better use on systems where
		touchpad/screen gestures convert to scroll events.
		Button press while swipe is slowing down now zeroes out the
		swipe velocity, causing the scrolling to stop.
                Added second chance algorithm for find_dumpfile() in case
                it fails.
3.3.95	15sep18	Fixed GtkGestureZoom to work better on touchscreens.
		More touchscreen tweaks: provide visual feedback on pinch
		and zoom.
		Fix for progress bar on splash screen in Wayland.